# glslsandbox-player

./: .gitignore  LICENSE  Makefile.am  README  README.md  configure.ac  shader-local.list  shader-tests.list  shader.list
SophiaConf2019/: 01_simple_color.frag  02a_simple_changing_color.frag  02b_simple_changing_color.frag  03a_checker_board.frag  03b_moving_checker_board.frag  03c_frag_coord_color.frag  04a_varying.frag  04b_varying.frag  05_mandel.frag  06a_perlin.frag  06b_perlin.frag  07a_mix_images.frag  07b_mix_images.frag  08_debayering.glslf  09_image-spiral.frag  10_raymarched-logo.frag  run-demo.sh
scripts/: Makefile.am  adb-gsp-logcat.sh  adb-gsp-restart.sh  adb-gsp-rm-prefs.sh  adb-gsp-run.sh  adb-gsp-set-cmdline.sh  adb-gsp-set-shader.sh  adb-gsp-show-cmdline.sh  adb-gsp-start.sh  adb-gsp-stop.sh  bug-report-info.sh  chk-shader-list  compare-images.sh  dl-shader  frag2inc  gen-shader-ids  inc2c  json2code  ls-shaders  mk-catalog.sh  run-demo-latest.sh  run-demo-random.sh  run-demo.sh  run-tests.sh  run-url.sh
scripts/tests/: Makefile
src/: 1.0.frag  10181.0.frag  10184.48.frag  10263.0.frag  10370.1.frag  10449.1.frag  10544.6.frag  10662.1.frag  10730.0.frag  10777.0.frag  10779.0.frag  10863.0.frag  11746.0.frag  11755.1.frag  11773.1.frag  12064.0.frag  12202.1.frag  1229.0.frag  12705.0.frag  1273.0.frag  12878.0.frag  12883.0.frag  13140.0.frag  13255.0.frag  1330.0.frag  13305.0.frag  13421.1.frag  13442.0.frag  13449.2.frag  13995.2.frag  1419.1.frag  1437.0.frag  1443.10.frag  1444.1.frag  14742.2.frag  14872.22.frag  1493.1.frag  1497.10.frag  1512.2.frag  15384.0.frag  (+1028 more)
tests/: Makefile.am  atlocal.in  glslsandbox-player-testsuite.in  testsuite.at  tst-common-macros.at  tst-frame-pause.at  tst-frames-output.at  tst-gl-egl-control.at  tst-log-output.at  tst-misc-invocation.at  tst-mouse-emu.at  tst-render-backbuffer.at  tst-render-control.at  tst-render-fbo.at  tst-render-window.at  tst-shader-input-file.at  tst-shader-list.at  tst-shader-precision.at  tst-shader-select.at  tst-shaders-builtin.at  tst-surface-position.at  tst-textures.at  tst-time-control.at  tst-warmup.at
tests/data/: 6.0.frag  backbuff-texture-warning.frag  link-error.frag  mix8.frag  mk-tex.sh  syntax-error.frag  tex0.frag
