demoscriptsdir = $(datadir)/$(PACKAGE_TARNAME)/scripts
demoscripts_SCRIPTS = \
	bug-report-info.sh \
	compare-images.sh \
	dl-shader \
	json2code \
	mk-catalog.sh \
	run-demo-random.sh \
	run-demo.sh \
	run-tests.sh \
	run-url.sh

testscriptsdir = $(demoscriptsdir)/tests
testscripts_DATA = \
	tests/Makefile
